operator/pkg/gateway-api/testdata/gateway/gateway-multi-port-http/output/httproute-http-route-8080.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-8080
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  hostnames:
    - api.example.test
  parentRefs:
    - name: multi-port-http
      sectionName: http-8080
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: infra-backend-v2
          port: 8080
status:
  parents:
    - conditions:
        - lastTransitionTime: "2026-07-05T00:00:00Z"
          message: Accepted HTTPRoute
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2026-07-05T00:00:00Z"
          message: Service reference is valid
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      controllerName: io.cilium/gateway-controller
      parentRef:
        name: multi-port-http
        sectionName: http-8080
