operator/pkg/gateway-api/testdata/gateway/gateway-multi-port-http/output/multi-port-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: multi-port-http
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  gatewayClassName: cilium
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      hostname: "*.example.test"
      name: http-80
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: Same
      hostname: "*.example.test"
      name: http-8080
      port: 8080
      protocol: HTTP
status:
  addresses:
    - type: IPAddress
      value: 172.18.255.200
  conditions:
    - lastTransitionTime: "2026-07-05T00:00:00Z"
      message: Gateway successfully scheduled
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-07-05T00:00:00Z"
      message: Gateway Programmed
      reason: Programmed
      status: "True"
      type: Programmed
  listeners:
    - attachedRoutes: 1
      conditions:
        - lastTransitionTime: "2026-07-05T00:00:00Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: "2026-07-05T00:00:00Z"
          message: Listener Accepted
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2026-07-05T00:00:00Z"
          message: Listener Programmed
          reason: Programmed
          status: "True"
          type: Programmed
      name: http-80
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
    - attachedRoutes: 1
      conditions:
        - lastTransitionTime: "2026-07-05T00:00:00Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: "2026-07-05T00:00:00Z"
          message: Listener Accepted
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2026-07-05T00:00:00Z"
          message: Listener Programmed
          reason: Programmed
          status: "True"
          type: Programmed
      name: http-8080
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
